<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 NECTEC
  ~   National Electronics and Computer Technology Center, Thailand
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:keepScreenOn="true"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_big_headline"
            fontPath="fonts/ThaiSansNeue-Bold.otf"

            tools:ignore="MissingPrefix"
            style="@style/TanrabadTextAppearance.Title"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/survey"
            android:textColor="@color/white"
            android:textSize="@dimen/text_big_headline"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/tanrabad_survey"
        android:textColor="@color/black_transparent_50"
        android:textSize="@dimen/text_headline"
        tools:ignore="NegativeMargin"
        />


    <View
        android:layout_width="@dimen/splash_hr_width"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/space_between_content"
        android:background="@color/white_transparent_50"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/support_by"
        android:textAppearance="@style/TanrabadTextAppearance.Caption"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ministry_of_public_health"
            android:scaleType="fitStart"
            android:src="@drawable/logo_moph"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ministry_of_science_and_technology"
            android:scaleType="fitStart"
            android:src="@drawable/logo_most"
            />
    </LinearLayout>

</LinearLayout>
