<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 NECTEC
  ~   National Electronics and Computer Technology Center, Thailand
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<com.bartoszlipinski.recyclerviewheader.RecyclerViewHeader
    android:id="@+id/card_header"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/card_title"
        style="@style/TanrabadTextAppearance.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/title_card_place_in_database"/>

    <TextView
        android:id="@+id/place_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/card_title"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/number_place_list_in_database"
        android:textIsSelectable="false"
        android:textSize="@dimen/text_body"
        tools:text="200 สถานที่"/>
    <TextView
        android:id="@+id/place_type"
        style="@style/TextViewTanrabad.Label"
        android:layout_below="@id/card_title"
        android:text="@string/place_type"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/place_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/place_type"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/place_type"
        android:layout_toRightOf="@id/place_type"
    />

</com.bartoszlipinski.recyclerviewheader.RecyclerViewHeader>