<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018 NECTEC
  ~   National Electronics and Computer Technology Center, Thailand
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <ImageView
        android:id="@+id/logo_tanrabad"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@null"
        android:src="@drawable/logo_tanrabad"/>

    <View
        android:background="@color/black_transparent_20"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:layout_weight="0.2"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:src="@drawable/person_default_background"
        android:id="@+id/avatar_icon"
        android:layout_width="80dp"
        android:layout_height="80dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:textAlignment="center"
        android:textAppearance="@style/TanrabadTextAppearance.Caption"
        app:autoSizeTextType="uniform"
        tools:text="Hello2" />

    <TextView
        android:id="@+id/user_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:textAlignment="center"
        android:textSize="@dimen/text_title"
        android:textAppearance="@style/TanrabadTextAppearance.Title"
        app:autoSizeTextType="uniform"
        tools:text="นายสวัสดี ทันระบาดสำรวจ" />

    <TextView
        android:id="@+id/organization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:textAlignment="center"
        android:textAppearance="@style/TanrabadTextAppearance.Body"
        tools:text="@string/nectec" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="0.15"/>

    <Button
        android:id="@+id/authentication_button"
        android:layout_width="@dimen/login_authen_btn_width"
        android:layout_height="@dimen/login_authen_btn_height"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/authentication"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/survey_start"
        android:textColor="@color/white" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/logout"
        android:text="@string/logout"
        android:textColor="@color/color_primary"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>


</LinearLayout>
