<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/container_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@drawable/container_bg"
        android:contentDescription="@string/survey_container_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/between_view"
        android:layout_marginStart="@dimen/between_view"
        android:orientation="vertical">

        <TextView
            android:id="@+id/container_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/between_view"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            android:textSize="@dimen/text_title"
            tools:text="ประเภทภาชนะ" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/text_body" />

            <EditText
                android:id="@+id/total_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/between_view"
                android:layout_marginStart="@dimen/between_view"
                android:layout_weight="1"
                android:background="@drawable/textfield_background"
                android:ems="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="2"
                android:padding="@dimen/between_view"
                android:textColor="@color/black"
                android:textSize="@dimen/text_body" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/between_view"
                android:layout_marginStart="@dimen/between_view"
                android:text="@string/found"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/text_body" />

            <EditText
                android:id="@+id/found_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/between_view"
                android:layout_marginStart="@dimen/between_view"
                android:layout_weight="1"
                android:background="@drawable/textfield_background"
                android:ems="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="2"
                android:padding="@dimen/between_view"
                android:textColor="@color/black"
                android:textSize="@dimen/text_body" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>